<resources>
    <string name="app_name">Cohort</string>

    <string name="hello">Hello World. I\'m here.</string>
    <string name="afro">afro</string>
    <string name="rest">I\'m learning Android</string>
    <string name="click">Click Here</string>

    <string name="enter_email_and_password">Enter Email and Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="mail">gmail.com</string>

    <string name="sign_in">Sign In</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="orders">Orders</string>
    <string name="home">Home</string>
    <string name="account">My Account</string>
    <string name="iv">IV</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>